[package]
name = "malloc-bench"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
mimalloc = { version = "*", default-features = false }
jemallocator = "*"
wee_alloc = "*"
tcmalloc = "*"
snmallocator = {git = "https://github.com/SchrodingerZhu/snmallocator"}
rpmalloc = "*"
bump_alloc = "*"
numanji = "*"
allocator-suite = "*"
lazy_static = "*"

[dependencies.ralloc]
git = "https://github.com/redox-os/ralloc.git"

[features]
bench_wee_alloc = []
bench_jemalloc = []
bench_mimalloc = []
bench_tcmalloc = []
bench_smimalloc = ["mimalloc/secure"]
bench_fsmimalloc = ["mimalloc/secure-full"]
bench_snmalloc = []
bench_snmalloc-1mib = ["snmallocator/1mib"]
bench_ralloc = []
bench_rpmalloc = []
bench_bump_alloc = []
bench_numanji = []
