[package]
name = "malloc-bench"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
mimalloc = { version = "*", default-features = false }
jemallocator = "*"
wee_alloc = "*"
tcmalloc = "*"
snmalloc-rs = "*"
rpmalloc = "*"
lazy_static = "*"

[features]
bench_wee_alloc = []
bench_jemalloc = []
bench_mimalloc = []
bench_tcmalloc = []
bench_smimalloc = ["mimalloc/secure"]
bench_fsmimalloc = ["mimalloc/secure-full"]
bench_snmalloc = []
bench_snmalloc-1mib = ["snmalloc-rs/1mib"]
bench_rpmalloc = []
